packages/core/src/input/input-group.element.scss
// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import './../styles/tokens/generated/index';

:host {
  width: 100%;
}

:host([control-width='shrink']) {
  width: auto;
}

::slotted([slot='controls']) {
  width: auto;
}

cds-control-action.status {
  height: #{$cds-global-space-7};
  padding-top: $cds-global-space-3;
}

:host([layout='horizontal']),
:host([layout='horizontal-inline']),
:host([layout='compact']) {
  cds-internal-control-label[action='primary'] {
    padding-top: $cds-global-space-5;
  }
}

:host([layout='compact']),
:host([layout='compact'][status='success']),
:host([layout='compact'][status='error']) {
  .messages {
    padding-top: $cds-global-space-5;
  }
}

